// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/riw/project/status/dateTodo 01 1`] = `
Object {
  "dateTodo": 0,
}
`;

exports[`lib/riw/project/status/dateTodo 02 1`] = `
Object {
  "dateTodo": 1970-01-01T00:00:02.000Z,
}
`;
